prevent horizontal scrolling on element overflow; add smooth scrolling

--- a/src/styles/tailwind.scss
+++ b/src/styles/tailwind.scss
@@ -3,6 +3,13 @@
 @tailwind utilities;
 
 @layer base {
+  html,
+  body {
+    max-width: 100%;
+    overflow-x: hidden;
+    scroll-behavior: smooth;
+  }
+
   .relative-fallback {
     position: relative;
   }
